update all left field
